--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Arty</a>
+      
+      
+      <%= link_to "Arty", root_path, class: "navbar-brand"%>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -21,7 +23,18 @@
 		</ul>
 
 		<ul class="nav navbar-nav pull-right">
-    	<li><%= link_to "Login", '#'%></li>
+
+      <% if user_signed_in? %>
+
+      <li><%= link_to "Edit Profile", edit_user_registration_path%></li>
+
+      <li><%= link_to "Logout", destroy_user_session_path, method: :delete%></li>
+
+      <% else %>
+
+    	<li><%= link_to "Login", new_user_session_path%></li>
+      <% end %>
+
     	</ul>
 
         
