--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,9 @@
+<% if user_signed_in? %>
+
+<h1> Wassap Bitch! </h1>
+
+<% else %>
+
 <div class="jumbotron">
 <h1>Hi My Name is Artem!</h1>
 <p>
@@ -8,8 +14,9 @@
 	page.
 </p>
 <p>
-	<%= link_to "Sign Up Now!","#", class:"btn btn-primary btn btn-default btn-lg"%>
+	<%= link_to "Sign Up Now!",new_user_registration_path, class:"btn btn-primary btn btn-default btn-lg"%>
 	
 </p>
 
 </div>
+<%end%>
